manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "tnsclustersoutheastasia"
    labels:
        app: "tnsclustersoutheastasia"
spec:
    type: ClusterIP
    ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
      name: http
    selector:
        app: "tnsclustersoutheastasia"
